# linkedin-scraper

./: .gitignore  CLAUDE.md  PRD.md  README.md  analysis.md  cli.py  pyproject.toml  tasks.md
api/: main.py  schemas.py
engine/: __init__.py  parallel.py  scraper.py  session.py
frontend/: index.html  main.js  style.css
